Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
How to reproduce:
- tracert 192.168.1.123 (or any unexistent host on your internal network)
- See results
Tested on Windows 7, here are ReactOS tracert output:
Tracing route to 192.168.1.123 [192.168.1.123]
|
over a maximum of 30 hops:
|
|
1 * * * 2 * * * 3 * * ^C
|
(as is, there are no linebreaks)
Microsoft tracert output:
Tracing route to 192.168.1.123 over a maximum of 30 hops
|
|
1 DESKTOP-N9AGR3H [192.168.1.2] reports: Destination host unreachable.
|
|
Trace complete.
|
Attachments
Issue Links
- relates to
-
CORE-14241 Ping command incorrectly shows response from unreachable host
-
- Resolved
-
- links to