[TRACERT] Improve error handling and output

- Correctly interpret network error codes
- Add output for generic transmit failure

CORE-14242 #resolve